[metadata]
name = sigopt_tools
version = 0.0.1
description = Tools for maintaining SigOpt repositories
license = Apache-2.0
url = https://sigopt.org
maintainer = SigOpt
maintainer_email = support@sigopt.com
long_description = Tools for maintaining SigOpt repositories

[options]
python_requires = >=3.7
packages = find_namespace:

[options.entry_points]
console_scripts =
  copyright-license-disclaimers = sigopt_tools.check_copyright_and_license_disclaimers:main
  sigoptlint-python = sigopt_tools.python_lint:main
  sigoptlint-shell = sigopt_tools.shell_lint:main

[options.packages.find]
exclude=
  test*

[flake8]
ignore=E129,E127,E203,E302,E131,E111,E114,E121,E501,E126,E123,E305,E402,I101,I100,N806,F403,E241,E731,F999,F401,F405,W503,E741,W504

[isort]
combine_star=True
force_grid_wrap=0
include_trailing_comma=True
indent='  '
line_length=120
lines_after_imports=2
sections=FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
use_parentheses=True
multi_line_output=3
